FUX[PASSWORD_SUCCESS]

--- a/Anatriksh/src/index.css
+++ b/Anatriksh/src/index.css
@@ -471,7 +471,12 @@ a,
     opacity: 0;
   }
 }
-
+/* Dashboard */
+.das-logo{
+  width: 76px;
+  height: 79px;
+  margin:auto;
+}
 /* ----------------------------------
    RESPONSIVE DESIGN
 ---------------------------------- */
