--- a/Anatriksh/src/index.css
+++ b/Anatriksh/src/index.css
@@ -220,6 +220,9 @@ a,
   font-size: 16px;
   color: var(--color-text-secondary);
 }
+.success-image{
+  width: 100%;
+}
 
 /* ----------------------------------
    STEP SYSTEM
